[package]
name = "betl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "BeagleEditor tools, all in one place!"
keywords = ["tool", "toolchain", "beagleeditor", "cli"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.17.8"
reqwest = { version = "0.12.8", features = ["blocking"] }
tokio = { version = "1.40.0", features = ["full"] }
